--- a/index.html
+++ b/index.html
@@ -23,15 +23,29 @@
         Nomination
         <a href="https://gecco-2021.sigevo.org/Best-Paper-Nominations">[link]</a>
     </li>
+    <li>2022.01 : 2021年度 enPiT 筑波大学 成果発表会 優秀賞
+        <a href="https://github.com/enpitut2021/chimimoryo_autumn">[Code]</a>
+        <a href="https://docs.google.com/presentation/d/19LOgfusJPz2zKUi5XlY2GovOB502de7kg8dkmTaCPzs/edit#slide=id.g119750c39e8_0_29">[Slide]</a>
+    </li>
+    <li>
+        2022.03 : 2021年度　情報理工学位PL特別表彰
+    </li>
 </ul>
 <h1 id="conference-presentation">Publications</h1>
 <ul>
-    <li>田邊 拓実, 福地 一斗, 佐久間 淳, 秋本 洋平 Sequential Variational Autoencoderを用いたAngry Birdsのステージ生成
+    <li>2021年度人工知能学会　田邊 拓実, 福地 一斗, 佐久間 淳, 秋本 洋平 Sequential Variational Autoencoderを用いたAngry Birdsのステージ生成
         <a href="https://www.jstage.jst.go.jp/article/pjsai/JSAI2021/0/JSAI2021_3G4GS2i04/_article/-char/ja/">[link]</a>
     </li>
-    <li>Takumi Tanabe, Kazuto Fukuchi, Jun Sakuma, Youhei Akimoto Level Generation for Angry Birds with Sequential VAE
+    <li>GECCO 2021 full paper Takumi Tanabe, Kazuto Fukuchi, Jun Sakuma, Youhei Akimoto Level Generation for Angry Birds with Sequential VAE
         and Latent Variable Evolution
         <a href="https://dl.acm.org/doi/10.1145/3449639.3459290">[link]</a>
+    </li>
+    <li>2022年度人工知能学会 田邊 拓実, 佐藤 怜, 福地 一斗, 佐久間 淳, 秋本 洋平 モデル化誤差に頑健な Max-Min Off-Policy Actor-Critic
+        <a href="https://www.jstage.jst.go.jp/article/pjsai/JSAI2022/0/JSAI2022_2C5GS203/_article/-char/ja/">[link]</a>
+    </li>
+    <li>Neurips 2022 poster Takumi Tanabe, Rei Sato, Kazuto Fukuchi, Jun Sakuma, Youhei Akimoto Max-Min Off-Policy Actor-Critic Method 
+        Focusing on Worst-Case Robustness to Model Misspecification
+        <a href="https://nips.cc/Conferences/2022/Schedule?showEvent=53532">[link]</a>
     </li>
 </ul>
 <h1 id="part-time-job-and-internship">Part-time job and Internship</h1>
@@ -44,6 +58,7 @@
     <li>2021 : 株式会社Preferred Networks</li>
     <li>2021 : 株式会社DeNA</li>
     <li>2021 : 株式会社サイバーエージェント</li>
+    <li>2022 : 株式会社博報堂</li>
 </ul>
 <h1 id="research-content">Research Contents</h1>
 <h2 id="procedural-contents-generation">Procedural Contents Generation
@@ -77,5 +92,7 @@
     <li> 2020 : セキュリティキャンプ全国大会2020 エクスプロイト自動化ゼミ 修了</li>
     <li> 2021 : Kaggle RANZCR Clip - Catheter and Line Position
         Challenge (solo|silver|65 / 1547 th)</li>
+    <li> 2022 : Kaggle U.S. Patent Phrase to Phrase Matching
+        (solo|silver|49/1889 th)</li>
     <li> Atcoder Rating 816(緑)</li>
 </ul>
